--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
 
 
+
 //--------------------------------------------------------------
 //商品
 // $.ajax({  //获取商品列表
@@ -118,6 +119,14 @@
 //         console.log(data);
 //     }
 // })
+
+    $.ajax({  
+    type: 'get',
+    url: 'http://localhost:3000/q/w',
+    success: function(data) {
+        console.log(data);
+    }
+})
 </script>
 </html>
 
