--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </body>
 <script>
     $.ajax({  //登录  
-    type: 'get',
+    type: 'post',
     url: 'http://localhost:3000/wechat/login',
     data: {
         code:'061LFt9d2b8WUD0EjM7d226f9d2LFt9q',
